--- a/style.css
+++ b/style.css
@@ -1,77 +1,167 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Kumbh Sans', sans-serif ;
-    background: url('./images/bg-pattern-top.svg') left -8vw top -50vh, url('./images/bg-pattern-bottom.svg') right -9vw top 50vh;
-    background-repeat: no-repeat;
-    background-size: 120vh;
-    background-color:  hsl(185, 75%, 39%);
+
+@media (max-width: 1440px) {
+    
+
+    body{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Kumbh Sans', sans-serif ;
+        background: url('./images/bg-pattern-top.svg') left -8vw top -50vh, url('./images/bg-pattern-bottom.svg') right -9vw top 50vh;
+        background-repeat: no-repeat;
+        background-size: 120vh;
+        background-color:  hsl(185, 75%, 39%);
+    }
+    
+    .card{
+        margin-top: 200px;
+        margin-left: 540px;
+        margin-bottom: 100px;
+        background-color: #fff;
+        width: 320px;
+        border-radius: 20px;
+        height: 350px;
+        box-shadow: 0 3px 20px rgb(0 0 0 / 0.2);
+    }
+    
+    .card .top{
+        background: url('./images/bg-pattern-card.svg');
+        background-size: fill;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        height: 34%;
+    }
+    
+    .card .mid{
+        text-align: center;
+    }
+    
+    .card .mid img{
+        margin-top: -50px;
+        margin-bottom: 0px;
+        border-radius: 50%;
+        border: 5px solid #fff;
+    }
+    
+    .card .mid .info{
+        margin-top: 0;
+    }
+    
+    .card .bottom{
+        padding: 26px 0 0px 0;
+        border-top: 1.5px solid hsl(227, 10%, 46%, .2);
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        align-items: center;
+    }
+    
+    .card .bottom .stat{
+        margin-left: 46px;
+    }
+    
+    span{
+        color: hsl(229, 23%, 23%);
+        font-size: 18px;
+        font-weight: 700;
+    }
+    
+    #numero{
+        color: hsl(227, 10%, 46%);
+        font-size: 18px;
+        font-weight: 400;
+    }
+    
+    #small-text{
+        font-size: 11px;
+        font-weight: 400;
+        color: hsl(227, 10%, 46%);
+    }
+
+
+
 }
 
-.card{
-    margin-top: 200px;
-    margin-left: 540px;
-    margin-bottom: 100px;
-    background-color: #fff;
-    width: 320px;
-    border-radius: 20px;
-    height: 350px;
-    box-shadow: 0 3px 20px rgb(0 0 0 / 0.2);
+@media (max-width: 420px) {
+    
+
+    body{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Kumbh Sans', sans-serif ;
+        background: url('./images/bg-pattern-top.svg') left -140vw top -50vh, url('./images/bg-pattern-bottom.svg') right -140vw top 50vh;
+        background-repeat: no-repeat;
+        background-size: 100vh;
+        background-color:  hsl(185, 75%, 39%);
+    }
+    
+    .card{
+        margin-top: 150px;
+        margin-left: 20px;
+        margin-bottom: 180px;
+        background-color: #fff;
+        width: 89%;
+        border-radius: 20px;
+        height: 350px;
+        box-shadow: 0 3px 20px rgb(0 0 0 / 0.2);
+    }
+    
+    .card .top{
+        background: url('./images/bg-pattern-card.svg');
+        background-size: fill;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        height: 34%;
+    }
+    
+    .card .mid{
+        text-align: center;
+    }
+    
+    .card .mid img{
+        margin-top: -50px;
+        margin-bottom: 0px;
+        border-radius: 50%;
+        border: 5px solid #fff;
+    }
+    
+    .card .mid .info{
+        margin-top: 0;
+    }
+    
+    .card .bottom{
+        padding: 26px 0 0px 0;
+        border-top: 1.5px solid hsl(227, 10%, 46%, .2);
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        align-items: center;
+    }
+    
+    .card .bottom .stat{
+        margin-left: 46px;
+    }
+    
+    span{
+        color: hsl(229, 23%, 23%);
+        font-size: 18px;
+        font-weight: 700;
+    }
+    
+    #numero{
+        color: hsl(227, 10%, 46%);
+        font-size: 18px;
+        font-weight: 400;
+    }
+    
+    #small-text{
+        font-size: 11px;
+        font-weight: 400;
+        color: hsl(227, 10%, 46%);
+    }
+
 }
 
-.card .top{
-    background: url('./images/bg-pattern-card.svg');
-    background-size: fill;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    height: 34%;
-}
-
-.card .mid{
-    text-align: center;
-}
-
-.card .mid img{
-    margin-top: -50px;
-    margin-bottom: 0px;
-    border-radius: 50%;
-    border: 5px solid #fff;
-}
-
-.card .mid .info{
-    margin-top: 0;
-}
-
-.card .bottom{
-    padding: 26px 0 0px 0;
-    border-top: 1.5px solid hsl(227, 10%, 46%);
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    align-items: center;
-}
-
-.card .bottom .stat{
-    margin-left: 46px;
-}
-
-span{
-    color: hsl(229, 23%, 23%);
-    font-size: 18px;
-    font-weight: 700;
-}
-
-#numero{
-    color: hsl(227, 10%, 46%);
-    font-size: 18px;
-    font-weight: 400;
-}
-
-#small-text{
-    font-size: 11px;
-    font-weight: 400;
-    color: hsl(227, 10%, 46%);
-}
